Fix spacing in site header. Revert back size.

--- a/content/stylesheets/_base.scss
+++ b/content/stylesheets/_base.scss
@@ -3,8 +3,8 @@
 $ratio: 1.61803399;
 
 // Font Sizes --------------------------------------------------------------
-$base-font-size: 14px;
-$base-line-height: 22px;
+$base-font-size: 16px;
+$base-line-height: 24px;
 
 $header-font-size: $base-font-size * $ratio;
 $pre-font-size: $base-font-size;
